<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="select game"
		android:textSize="20dp"/>
	<Button 
		android:id="@+id/butSpeedTestPhone"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:text="@string/speed_test_phone"/>
	<Button 
		android:id="@+id/butSpeedClick"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/butSpeedTestPhone"
	    android:layout_centerHorizontal="true"
	    android:text="@string/speed_click"/>
	<Button 
		android:id="@+id/butSpeedCalculation"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:layout_below="@id/butSpeedClick"
	    android:text="@string/speed_calculation"/>
</RelativeLayout>